--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "ignorePatterns": [
-      "build/"
+      "_static/"
     ]
   },
   "dependencies": {
